-
Bug
-
Resolution: Done
-
P1: Critical
-
Qt Creator 3.1.2, Qt Creator 3.2.0-rc1
-
None
-
Archlinux, Qt5.3.1
Linux 3.16.1-1-ARCH #1 SMP PREEMPT Thu Aug 14 07:40:19 CEST 2014 x86_64 GNU/Linux
-
a01f6cadf492f6fba0e1f7024faeed56412c3d70
If selected strings which are parameter(s) to an unknown symbolic name are right clicked (or the context menu is opened otherwise e.g. meta key), qt-creator segfaults.
Attached is an example to reproduce and a backtrace.
| For Gerrit Dashboard: QTCREATORBUG-12853 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 92468,2 | CppEditor: Return on invalid code in ExtractLiteralAsParameter::match | 3.2 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |